@@ -23,6 +23,7 @@ class WC_Payments_Account {
 	const ACCOUNT_OPTION                 = 'wcpay_account_data';
 	const ACCOUNT_RETRIEVAL_ERROR        = 'ERROR';
 	const ON_BOARDING_DISABLED_TRANSIENT = 'wcpay_on_boarding_disabled';
+	const ON_BOARDING_STARTED_TRANSIENT  = 'wcpay_on_boarding_started';
 	const ERROR_MESSAGE_TRANSIENT        = 'wcpay_error_message';
 
 	/**
@@ -539,6 +540,16 @@ class WC_Payments_Account {
 	 * @param string $wcpay_connect_from - where the user should be returned to after connecting.
 	 */
 	private function init_stripe_oauth( $wcpay_connect_from ) {
+		if ( get_transient( self::ON_BOARDING_STARTED_TRANSIENT ) ) {
+			$this->redirect_to_onboarding_page(
+				__( 'There was a duplicate attempt to initiate account setup. Please wait a few seconds and try again.', 'woocommerce-payments' )
+			);
+			return;
+		}
+
+		// Set a quickly expiring transient to save the current onboarding state and avoid duplicate requests.
+		set_transient( self::ON_BOARDING_STARTED_TRANSIENT, true, 10 );
+
 		// Clear account transient when generating Stripe's oauth data.
 		$this->clear_cache();
 
@@ -563,6 +574,8 @@ class WC_Payments_Account {
 			],
 			$this->get_actioned_notes()
 		);
+
+		delete_transient( self::ON_BOARDING_STARTED_TRANSIENT );
 
 		// If an account already exists for this site, we're done.
 		if ( false === $oauth_data['url'] ) {
