@@ -8,6 +8,7 @@
 * Fix - User order currency format on admin refund button.
 * Fix - Clear the list of selected currencies after closing the modal for adding currencies.
 * Fix - Fix subscription change payment method errors after entering a payment method that fails.
+* Fix - Prevent duplicate account onboarding requests.
 
 = 2.9.1 - 2021-09-07 =
 * Fix - Error while checking out with UPE when fields are hidden.
